--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <div id="links" class="animated fadeInLeft delay-1s games">
             <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option></select></div>
             <h2 class="animated jello game_title">All Games:</h2>
-            <a id="Slope" class="link" href="https://webglmath.github.io/slope/" target="_blank"><span class="bar"></span><img src="./icons/slope.jpg" alt="1 (2048 game)"><b>1 (2048 game)</b></a>
+            <a id="Slope" class="link" href="https://webglmath.github.io/slope/" target="_blank"><span class="bar"></span><img src="./icons/slope.jpg" alt="Slope"><b>Slope</b></a>
             <a id="1 (2048 game)" class="link" href="./play/1/" target="_blank"><span class="bar"></span><img src="./icons/one.webp" alt="1 (2048 game)"><b>1 (2048 game)</b></a>
             <a id="100 Player Pong" class="glink" href="./play/100-player-pong/" target="_blank"><span class="bar"></span><img src="./icons/100pong.webp"><b>100 Player Pong</b></a>
             <a id="10 Minutes Till Dawn" class="link" href="./play/10-minutes-till-dawn/" target="_blank"><span class="bar"></span><img src="./icons/10m.webp"><b>10 Minutes Till Dawn</b></a>
-            <a id="123movies" class="link stream" href="./play/123movies/" target="_blank"><span class="bar"></span><img src="./icons/123movies.webp"><b>123movies</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
             <a id="1v1.lol" class="link pop" href="./play/1v1/" target="_blank"><span class="bar"></span><img src="./icons/1v1.webp"><b>1v1.lol</b>  <span class="badge"><i class="fa-solid fa-star"></i> POPULAR</span><span class="badge"></a>
             <a id="1v1.space" class="link" href="./play/1v1space/" target="_blank"><span class="bar"></span><img src="./icons/1v1space.webp"><b>1v1.space</b></a>
             <a id="2048" class="link" href="./play/2048/" target="_blank"><span class="bar"></span><img src="./icons/2048.webp"><b>2048</b></a>
